--- a/styles.css
+++ b/styles.css
@@ -338,7 +338,6 @@ footer {
 }
 
 .marquee {
-  width: 100%;
   overflow: hidden;
   position: relative;
   border-top: 1px solid var(--border-color);
@@ -433,6 +432,8 @@ footer {
     margin: 0 auto;
     width: 100%;
     height: 500px;
+    position: relative;
+    z-index: 10;
   }
   .subtitle,
   .title,
@@ -476,12 +477,6 @@ footer {
   p {
     text-align: center;
   }
-}
-
-@media screen and (max-width: 800px) {
-  .header-content {
-    gap: 0px;
-  }
   .footer-content {
     justify-content: center;
     flex-direction: column;
@@ -491,6 +486,12 @@ footer {
   }
   .span {
     margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .header-content {
+    gap: 0px;
   }
   .burger-menu {
     display: flex;
